# ESP32S3_BLE_MQTT_GATEWAY

./: CMakeLists.txt  REREAD.MD  sdkconfig.defaults
components/BSP/: CMakeLists.txt
components/BSP/CAN/: can.c  can.h  can_protocol.c  can_protocol.h  can_transport.c
components/BSP/IIC/: iic.c  iic.h
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h  lvgl_lcd.c  lvgl_lcd.h
components/BSP/SPI/: spi.c  spi.h
components/BSP/XL9555/: xl9555.c  xl9555.h
main/: CMakeLists.txt  main.c
main/src/ble/: ble.h  ble_event.c  ble_gatt.c  ble_gatt_client.c  ble_gatt_server.c
main/src/display/: desktop.c  desktop.h  menu.c  menu.h  status_list.c  status_list.h  ui.c  ui.h
main/src/display/custom/: custom.c  custom.h
main/src/display/desktop/: desktop.c  desktop.h  menu.c  menu.h
main/src/display/desktop/custom/: custom.c  custom.h
main/src/display/menu/: menu.c  menu.h
main/src/display/smf/: smf.c  smf.h
main/src/gateway/: gateway_cmd.h  gateway_event.c  gateway_event.h  gateway_msg.c  gateway_msg.h  gateway_status.c  gateway_status.h  memory_pool.c  memory_pool.h
main/src/key/: key_scan.c  key_scan.h
main/src/mqtts/: ca.c  mqtt_event.c  mqtts.c  mqtts.h
main/src/ota/: ota.c  ota.h
main/src/util/: gw_log.h
main/src/wifi/: http.c  wifi.c  wifi.h  wifi_log.c
